--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Yuku Takahashi <taka84u9@gmail.com>",
-  "name": "jquery-overlay",
+  "name": "@kmcb777/jquery-overlay",
   "main": "jquery.overlay.js",
   "version": "0.0.5",
   "devDependencies": {
